minimum slate implementation
Bundle size:

173KB Slate
127KB React
85KB Remix

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build": "remix build",
+    "build": "remix build --sourcemap",
     "dev": "remix dev --manual",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/index.js",
@@ -17,7 +17,9 @@
     "@remix-run/serve": "^2.4.1",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "slate": "^0.101.5",
+    "slate-react": "^0.101.5"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.4.1",
